fix: add z-index

--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,6 +1,8 @@
 .footer {
+  position: relative;
   padding: 20px 0;
   background: $blackColor;
+  z-index: 3;
   // .footer__container
   &__container {
     display: flex;
